--- a/pub/resource/css/wadiz.css
+++ b/pub/resource/css/wadiz.css
@@ -9,9 +9,9 @@
 html, body, div, p, span, strong, b, em, iframe, pre, h1, h2, h3, h4, h5, h6,
 img, dl, dt, dd, fieldset, form, legend, label, table, caption, thead, tbody, tfoot, tr, th, td,
 ul, ol, li, a, input, select, textarea, article, aside, canvas, details, embed, figure, figcaption,
-footer, header, menu, nav, output, ruby, section, summary, time, mark, audio, video {margin: 0;padding: 0;border: 0 none;font-family:'Muli','Noto Sans KR';font-weight: 400;}
-body, input, select, textarea {font-family: 'Muli','Noto Sans KR', Dotum, "돋음", AppleGothic, Sans-serif, Arial;font-size: 14px;font-weight: 400;line-height: 1;color: #333;word-break:break-all;}
-h1, h2, h3, h4, h5, h6, b, strong {font-family:'Muli','Noto Sans KR';font-weight: 500;}
+footer, header, menu, nav, output, ruby, section, summary, time, mark, audio, video {margin: 0;padding: 0;border: 0 none;font-family:'Noto Sans KR';font-weight: 400;}
+body, input, select, textarea {font-family: 'Noto Sans KR', Dotum, "돋음", AppleGothic, Sans-serif, Arial;font-size: 14px;font-weight: 400;line-height: 1;color: #333;word-break:break-all;}
+h1, h2, h3, h4, h5, h6, b, strong {font-family:'Noto Sans KR';font-weight: 500;}
 html,body {height: 100%;width: 100%;}
 ul, ol, li {list-style: none;}
 em, address, i {font-style: normal;}
@@ -41,7 +41,7 @@ audio,canvas,progress,video {display: inline-block;vertical-align: baseline}
 input[type='text'], input[type='password'], input[type='tel'], input[type='search'] {
 	height:50px;padding:0 10px 0 18px;-webkit-appearance:none;
 	outline:none 0;box-sizing:border-box;line-height:48px;color:#555;vertical-align: middle;
-	font-family:'Muli','Noto Sans KR';font-weight:300;
+	font-family:'Noto Sans KR';font-weight:300;
 	border:1px solid #dedede;
 }
 input[type="search"] {height:56px;line-height:53px;padding:0 10px 0 30px;background-color:#f0f2f4;border-radius:5px;border:1px solid #dce1e5;}
@@ -105,8 +105,8 @@ select option { font-size: 13px;}
 .mb-xl {margin-bottom: 40px !important;}
 .mb-2xl {margin-bottom: 50px !important;}
 .pt70 {padding-top: 70px !important;}
-.primary-color {color:#00b2b2;}
-.point-col01 {color: #99d7e4 !important;}
+.primary-color {color:#00cccc;}
+.point-col01 {color: #00cccc !important;}
 .space-char01 { display: inline-block; margin: 0 12px;}
 
 .fl {float: left;}
@@ -127,11 +127,11 @@ select option { font-size: 13px;}
 
 /* Common Component Style */
 [class*="btn-"] { display: inline-block;}
-.btn-type {height:55px;font-size:21px;font-weight:500;color:#fff;padding:0 30px;line-height:52px;background-color:#00b2b2;border-radius:10px}
+.btn-type {height:55px;font-size:21px;font-weight:500;color:#fff;padding:0 30px;line-height:52px;background-color:#00cccc;border-radius:10px}
 .btn-type ~ .btn-type {margin-left:10px;}
 .btn-move-top {display:none;position: fixed;z-index:250;left: 50%;margin-left:41%;bottom:80px;width: 86px;height: 86px; background-image:url('/pub/resource/images/sp_wadiz.png');background-repeat:no-repeat;background-size:500px auto;background-position:0 -280px;}
 .btn-search {position:absolute;top:2px;right:15px;width:50px;height:50px;background-position:-240px -280px;}
-.btn-type2 {color:#fff;font-size:12px;height:30px;line-height:29px;padding:0 12px;background-color:#50bdd2;vertical-align:middle}
+.btn-type2 {color:#fff;font-size:12px;height:30px;line-height:29px;padding:0 12px;background-color:#00cccc;vertical-align:middle}
 
 
 /* select */
@@ -154,11 +154,11 @@ select option { font-size: 13px;}
 /* paging style */
 .paging {position:relative; margin-top: 45px;text-align:center;font-size: 0;}
 .paging a {position:relative;display:inline-block;width:30px;height:30px;vertical-align: middle;}
-.paging a:hover { color: #00b2b2;}
+.paging a:hover { color: #00cccc;}
 .paging .page-number {margin-right:10px; font-weight: 400;width:30px;height:30px;text-align:center;line-height:26px;font-size:16px;color: #000;}
-.paging .page-number.current {color: #00b2b2;}
+.paging .page-number.current {color: #00cccc;}
 .paging .page-number:hover::after,
-.paging .page-number.current::after {content:"";position:absolute;bottom:2px;left:50%;transform:translate(-50%);width:10px;height:1px;background-color:#00b2b2;}
+.paging .page-number.current::after {content:"";position:absolute;bottom:2px;left:50%;transform:translate(-50%);width:10px;height:1px;background-color:#00cccc;}
 .paging .prev {margin-right:25px;background-position: -300px -280px;}
 .paging .next {margin-left:15px;background-position: -350px -280px;}
 .mob-paging {display:none}
@@ -353,9 +353,9 @@ html.fp-enabled,
 #header.isBg #desktopMenu .mm-1depth .link-1depth {color:#000;}
 #desktopMenu .main-menu-list .mm-1depth .link-1depth {position:relative;display:block;padding:60px 0 49px;font-size:22px;color:#1d2129;}
 #desktopMenu .main-menu-list .mm-1depth .link-1depth::before {content:"";width:0;left:50%;position:absolute;top:0;transition:all .4s;}
-#desktopMenu .main-menu-list .mm-1depth:hover .link-1depth::before {left:0;width:100%;height:8px;background-color:#00caca;;}
+#desktopMenu .main-menu-list .mm-1depth:hover .link-1depth::before {left:0;width:100%;height:8px;background-color:#00cccc;;}
 #desktopMenu .main-menu-list .mm-1depth .link-1depth {color:#fff;transition:all .4s}
-#desktopMenu .main-menu-list .mm-1depth:hover .link-1depth {color:#00caca;}
+#desktopMenu .main-menu-list .mm-1depth:hover .link-1depth {color:#00cccc;}
 #desktopMenu .main-menu-list .mm-1depth:not(:first-child) {margin-left:68px;}
 #desktopMenu .main-menu-list .mm-1depth:nth-child(3) .mm-sub-box {width:400px;right:66px;}
 #desktopMenu .main-menu-list .mm-1depth:nth-child(4) .mm-sub-box {width:420px;right:-4px;}
@@ -368,15 +368,15 @@ html.fp-enabled,
 #desktopMenu .mm-sub-list .mm-2depth .link-2depth {transition:all .4s;position:relative;color:#1d2129;font-size:18px;}
 #desktopMenu .mm-sub-list .mm-2depth .link-2depth::after {content:"";transition:all .4s;position:absolute;width:0;height:1px;left:50%;bottom:-10px;}
 #desktopMenu .mm-sub-list .mm-2depth:hover .link-2depth::after,
-#desktopMenu .mm-sub-list .mm-2depth.active .link-2depth::after {width:100%;left:0;background-color:#00caca;}
+#desktopMenu .mm-sub-list .mm-2depth.active .link-2depth::after {width:100%;left:0;background-color:#00cccc;}
 #desktopMenu .mm-sub-list .mm-2depth:hover .link-2depth,
-#desktopMenu .mm-sub-list .mm-2depth.active .link-2depth {color:#00caca;}
+#desktopMenu .mm-sub-list .mm-2depth.active .link-2depth {color:#00cccc;}
 .mob-copyright,
 #mobileMenu {display:none}
 
 .fb-menu-box {position: fixed;z-index: 100;margin-top: -32px;top: 50%;opacity: 1;-webkit-transform: translate3d(0,0,0);right: 100px;transition:.5s}
 .fb-menu-box #fp-menu {margin: 0;padding: 0;}
-.fb-menu-box #fp-menu .fp-menu-item {display: block;position: relative;}
+.fb-menu-box #fp-menu .fp-menu-item {display: block;position: relative;height:15px;}
 .fb-menu-box #fp-menu .fp-menu-item:not(:last-child) {margin-bottom:20px;}
 .fb-menu-box #fp-menu .fp-menu-item a {display: block;position: relative;z-index: 1;width: 100%;height: 100%;cursor: pointer;text-decoration: none;text-align:right;color:#fff;}
 .fb-menu-box #fp-menu .fp-menu-item a span {display:inline-block;border-radius: 50%;position: absolute;z-index: 1;height: 10px;width: 10px;border: 1px solid #ccc;right: -21px;top: 50%;margin: -5px 0 0 -2px;transition: all 0.1s ease-in-out;}
@@ -412,7 +412,7 @@ html.fp-enabled,
 .visual-box .visual-title-type2 {font-size:74px;margin-bottom:75px;}
 .visual-box .visual-title-type2 .title-ft {display:inline-block;margin-top:10px;font-weight:100;}
 .visual-box .visual-title-type2 em {display:inline-block;width:150px;height:3px;background-color:#fff;vertical-align:bottom;}
-.visual-box .visual-desc2 {position:relative;margin:30px 0 55px;font-size:30px;color:#99d7e4;}
+.visual-box .visual-desc2 {position:relative;margin:30px 0 55px;font-size:30px;color:#00cccc;}
 .visual-box .icon-visual01 {display:inline-block;width:150px;height:182px;margin-bottom:95px;background-position-x:-350px;}
 .guide-arrow {position:relative;font-size:16px;color:#fff;}
 .guide-arrow::after {position:absolute;left:50%;top:38px;transform:translate(-50%);width:26px;height:14px;background-position-x:-50px}
@@ -453,10 +453,10 @@ html.fp-enabled,
 .bbs-list .bbs-item .bbs-col.last {margin-left:auto;text-align:right;padding-right:8px;}
 .bbs-list .bbs-item .bbs-col.last .date{display:inline-block;padding-top:9px;font-size:16px;font-weight:100;color:#8a8a8a;}
 .bbs-list .bbs-link {display:inline-block;padding-top:7px;font-size:22px;font-weight:100;width:100%;overflow:hidden;white-space:nowrap;text-overflow:ellipsis;}
-.bbs-list .col-sub-title {color:#00cbcb;}
+.bbs-list .col-sub-title {color:#00cccc;}
 .bbs-list .mob-sub-title {display:none}
 .bbs-list .col-title {color:#333;}
-.bbs-list .col-flag {display:inline-block;min-width:110px;padding:0 10px;height:35px;line-height:33px;border:1px solid #00b2b2;border-radius:3px;color:#00b2b2;font-size:16px;text-align:center}
+.bbs-list .col-flag {display:inline-block;min-width:110px;padding:0 10px;height:35px;line-height:33px;border:1px solid #00cccc;border-radius:3px;color:#00cccc;font-size:16px;text-align:center}
 .align-box.main-space {margin-top:60px;}
 .select-box.full {display:none;width:100%;}
 
@@ -486,8 +486,8 @@ html.fp-enabled,
 .sub-visual-section.recruit {background-image:url('/pub/resource/images/sub_visual_04.jpg');}
 .section-title {margin-bottom:28px;font-size:45px;font-weight:300;line-height:60px;text-align:center;letter-spacing:-1.5px}
 .section-desc {text-align:center;font-size:18px;font-weight:100;line-height:28px;}
-.point-title {position:relative;display:block;font-size:24px;color:#00cbcb;text-align:center}
-.point-title::after {content:"";display:block;position:relative;transform:translate(-50%);left:50%;width:22px;height:1px;margin:32px 0;background-color:#00cbcb;text-align:center}
+.point-title {position:relative;display:block;font-size:24px;color:#00cccc;text-align:center}
+.point-title::after {content:"";display:block;position:relative;transform:translate(-50%);left:50%;width:22px;height:1px;margin:32px 0;background-color:#00cccc;text-align:center}
 .line-v1 {display:none}
 .about-goal {display:flex;justify-content:space-between;}
 .goal-box {width:50%;padding:90px 8px;border:1px solid rgba(255,255,255, .26);border-radius:40px 0 0 0;text-align:center;}
@@ -507,9 +507,9 @@ html.fp-enabled,
 .history-list .history-item:not(:first-child) {margin-top:42px;}
 .history-list .history-item:nth-child(2n) {margin-right:auto;margin-left:0;text-align:right;padding-left:0;padding-right:32px;}
 .history-list .history-item:first-child::before,
-.history-list .history-item:last-child::before {content:"";position:absolute;left:0;top:-4px;margin-left:-18px;width:36px;height:36px;border:1px solid #00cbcb;border-radius:100%;background-color:#fff;z-index:15;}
+.history-list .history-item:last-child::before {content:"";position:absolute;left:0;top:-4px;margin-left:-18px;width:36px;height:36px;border:1px solid #00cccc;border-radius:100%;background-color:#fff;z-index:15;}
 .history-list .history-item:last-child::before {left:auto;right:0;margin-left:0;margin-right:-19px;}
-.history-list .history-item::after {content:"";position:absolute;left:-4px;top:9px;width:8px;height:8px;border-radius:100%;background-color:#00cbcb;z-index:16;}
+.history-list .history-item::after {content:"";position:absolute;left:-4px;top:9px;width:8px;height:8px;border-radius:100%;background-color:#00cccc;z-index:16;}
 .history-list .history-item:first-child::after,
 .history-list .history-item:last-child::after {top:10px;}
 .history-list .history-item:nth-child(2n)::after {left:auto;right:-5px;}
@@ -547,7 +547,7 @@ html.fp-enabled,
 .inside-list .inside-item {position:relative;width:calc((100% - 72px) / 3 );margin-right:36px;margin-bottom:50px;}
 .inside-list .inside-item:nth-child(3n) {margin-right:0;}
 .inside-list .inside-item:hover::after,
-.inside-list .inside-item:active::after {content:"";position:absolute;left:-1px;right:-1px;bottom:-1px;height:2px;background-color:#00cbcb;}
+.inside-list .inside-item:active::after {content:"";position:absolute;left:-1px;right:-1px;bottom:-1px;height:2px;background-color:#00cccc;}
 .inside-list .inside-link {display:block;}
 .inside-list .inside-thumbnail {overflow:hidden;width:100%;border-radius:20px 0 0 0;}
 .inside-list .inside-thumbnail img {width:100%;height:auto;}
@@ -557,10 +557,10 @@ html.fp-enabled,
 .align-box.v1 {padding-top:30px;margin-top:10px;border-top:1px solid #dedede;}
 .detail-area {position:relative;margin-bottom:30px;padding:90px 80px 80px;border:1px solid #dedede;border-radius:20px 0 0 0;}
 .detail-area .detail-title {border-bottom:1px dashed #b7b7b7;padding-bottom:40px;font-size:45px;line-height:1.4;color:#000;}
-.detail-area .detail-date {position:absolute;top:40px;right:50px;color:#00cbcb;}
+.detail-area .detail-date {position:absolute;top:40px;right:50px;color:#00cccc;}
 .detail-content {padding:40px 0 0;line-height:1.4;}
 .detail-content img {max-width:100% !important; height:auto;}
-.sub-title2 {margin-top:50px;margin-bottom:30px;font-size:24px;color:#00cbcb;}
+.sub-title2 {margin-top:50px;margin-bottom:30px;font-size:24px;color:#00cccc;}
 .sub-title2.v1 {margin:90px 0 25px;}
 
 /* owl slide */
@@ -584,9 +584,9 @@ html.fp-enabled,
 .tab-list .tab-item:last-child {border-left:0;}
 .tab-list .tab-item .tab-link {display:block;font-size:18px;color:#333;font-weight:300;}
 .tab-list .tab-item.active .tab-link,
-.tab-list .tab-item:hover .tab-link {color:#00cbcb;}
+.tab-list .tab-item:hover .tab-link {color:#00cccc;}
 .tab-list .tab-item.active::after,
-.tab-list .tab-item:hover:after {content:"";position:absolute;left:-1px;right:-1px;bottom:-1px;height:3px;background-color:#00cbcb;}
+.tab-list .tab-item:hover:after {content:"";position:absolute;left:-1px;right:-1px;bottom:-1px;height:3px;background-color:#00cccc;}
 .step-section {display:flex;margin:95px 0 130px;}
 .step-section .step-inner {width:50%;}
 .step-section .step-inner + .step-inner {margin-left:35px;}
@@ -602,7 +602,7 @@ html.fp-enabled,
 
 .guide-list {}
 .guide-list .guide-item {margin-top:10px;font-size:16px;color:#333;line-height:1.2;text-indent:-9px;padding-left:9px;}
-.guide-list .guide-item .guide-point {margin-top:10px;font-weight:500;color:#00cbcb;}
+.guide-list .guide-item .guide-point {margin-top:10px;font-weight:500;color:#00cccc;}
 
 .search-section {margin:70px 0 50px;text-align:center;}
 .search {position:relative;display:inline-block;text-align:center;width:500px;}
@@ -639,7 +639,7 @@ input[type="search"].ipt-sch {width:100%;padding-right:65px;}
 .layer_section.showing {visibility:visible;opacity:1;}
 .layer_section.showing .layer_section-container {top:50%;opacity:1;}
 .layer_section-container .layer-header {margin-bottom:40px;padding:36px 34px;background-color:#1d2129;line-height:1.2;}
-.layer_section-container .layer-header .header-title {font-size: 24px;color: #00cbcb;margin:0;}
+.layer_section-container .layer-header .header-title {font-size: 24px;color: #00cccc;margin:0;}
 .layer_section-container .btn_layer-close {position:absolute;top:38px;right:38px;width:26px;height:26px;background-position:-440px -340px;}
 .layer_section-container .layer-content {overflow-y:auto;max-height:calc(100vh - 100px); padding:0 36px 33px;}
 
