--- a/res/pub/front/resource/css/wadiz.css
+++ b/res/pub/front/resource/css/wadiz.css
@@ -547,10 +547,10 @@ html.fp-enabled,
 .inside-list .inside-item:hover::after,
 .inside-list .inside-item:active::after {content:"";position:absolute;left:-1px;right:-1px;bottom:-1px;height:2px;background-color:#00cccc;}
 .inside-list .inside-link {display:block;}
-.inside-list .inside-thumbnail {overflow:hidden;width:100%;border-radius:20px 0 0 0;}
+.inside-list .inside-thumbnail {overflow:hidden;width:100%;border-radius:20px 0 0 0;max-height:229px}
 .inside-list .inside-thumbnail img {width:100%;height:auto;}
 .inside-list .inside-box {padding:25px 24px 27px;border:solid #dedede;border-width:0 1px 1px 1px;}
-.inside-list .inside-txt {overflow:hidden; text-overflow:ellipsis;display:-webkit-box; -webkit-line-clamp:2; -webkit-box-orient:vertical;word-wrap:break-word;color:#333;font-size:26px;line-height:1.4;}
+.inside-list .inside-txt {overflow:hidden; text-overflow:ellipsis;display:-webkit-box; -webkit-line-clamp:2; -webkit-box-orient:vertical;word-wrap:break-word;color:#333;font-size:26px;line-height:1.4;min-height:72px}
 .inside-list .inside-date {display:block;margin-top:35px;color:#8a8a8a;}
 .align-box.v1 {padding-top:30px;margin-top:10px;border-top:1px solid #dedede;}
 .detail-area {position:relative;margin-bottom:30px;padding:90px 80px 80px;border:1px solid #dedede;border-radius:20px 0 0 0;}
