--- a/res/pub/front/resource/css/wadiz.css
+++ b/res/pub/front/resource/css/wadiz.css
@@ -5,12 +5,14 @@
  * @ Reset Style *
  * -------------------------------
  */
+@import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+
 html, body, div, p, span, strong, b, em, iframe, pre, h1, h2, h3, h4, h5, h6,
 img, dl, dt, dd, fieldset, form, legend, label, table, caption, thead, tbody, tfoot, tr, th, td,
 ul, ol, li, a, input, select, textarea, article, aside, canvas, details, embed, figure, figcaption,
-footer, header, menu, nav, output, ruby, section, summary, time, mark, audio, video {margin: 0;padding: 0;border: 0 none;font-family:'Noto Sans KR';font-weight: 400;}
+footer, header, menu, nav, output, ruby, section, summary, time, mark, audio, video {margin: 0;padding: 0;border: 0 none;font-family:'Noto Sans KR','Sans-serif';font-weight: 400;}
 body, input, select, textarea {font-family: 'Noto Sans KR', Dotum, "돋음", AppleGothic, Sans-serif, Arial;font-size: 14px;font-weight: 400;line-height: 1;color: #333;word-break:break-all;}
-h1, h2, h3, h4, h5, h6, b, strong {font-family:'Noto Sans KR';font-weight: 500;}
+h1, h2, h3, h4, h5, h6, b, strong {font-family:'Noto Sans KR', 'Sans-serif';font-weight: 500;}
 html,body {height: 100%;width: 100%;}
 ul, ol, li {list-style: none;}
 em, address, i {font-style: normal;}
@@ -40,7 +42,7 @@ audio,canvas,progress,video {display: inline-block;vertical-align: baseline}
 input[type='text'], input[type='password'], input[type='tel'], input[type='search'] {
 	height:50px;padding:0 10px 0 18px;-webkit-appearance:none;
 	outline:none 0;box-sizing:border-box;line-height:48px;color:#555;vertical-align: middle;
-	font-family:'Noto Sans KR';font-weight:300;
+	font-family:'Noto Sans KR','Sans-serif';font-weight:300;
 	border:1px solid #dedede;
 }
 input[type="search"] {height:56px;line-height:53px;padding:0 10px 0 30px;background-color:#f0f2f4;border-radius:5px;border:1px solid #dce1e5;}
@@ -412,13 +414,11 @@ html.fp-enabled,
 .visual-box .visual-title-type2 .title-ft {display:inline-block;margin-top:10px;font-weight:100;}
 .visual-box .visual-title-type2 em {display:inline-block;width:150px;height:3px;background-color:#fff;vertical-align:bottom;}
 .visual-box .visual-desc2 {position:relative;margin:30px 0 55px;font-size:30px;color:#00cccc;}
-.visual-box .icon-visual01 {display:inline-block;width:150px;height:182px;margin-bottom:95px;background-position-x:-350px;}
-.guide-arrow {position:relative;font-size:16px;color:#fff;}
+.visual-box .icon-visual01 {display:inline-block;width:150px;height:182px;background-position-x:-350px}
+.guide-arrow {position:absolute;font-size:16px;color:#fff;bottom:70px;text-align:center;left:0;right:0}
 .guide-arrow::after {position:absolute;left:50%;top:38px;transform:translate(-50%);width:26px;height:14px;background-position-x:-50px}
 #footer {background-color:#1d2129;padding:50px 0 60px;text-align:center;}
 #footer .footer-logo {display:inline-block;width:149px;height:28px;margin-bottom:30px;background-position-x:-90px;}
-.guide-privacy {}
-.guide-privacy {}
 .guide-privacy .gp-item {position:relative;display:inline-block;font-size:0;}
 .guide-privacy .gp-item .gp-link {font-size:14px;color:#6b6d72;}
 .guide-privacy .gp-item:not(:last-child) {margin-right:33px;}
@@ -672,6 +672,7 @@ input[type="search"].ipt-sch {width:100%;padding-right:65px;}
 .spinor-area svg rect{fill:#00cccc}
 body.show-spinner .spinor-area { display: block; }
 .video-section {overflow:hidden;position:fixed;left:0;right:0;top:0;bottom:0;z-index:-10;}
+.video-section:after {content:'';position:absolute;top:0;right:0;bottom:0;left:0;background-color:rgba(0,0,0,.65)}
 .video-section .video { position: absolute;top: 50%;left: 50%;width: auto;height: auto;min-width: 100%;min-height: 100%;transform: translate(-50%, -50%);}
 
 /* edit */
