--- a/res/pub/front/resource/css/wadiz.css
+++ b/res/pub/front/resource/css/wadiz.css
@@ -392,6 +392,7 @@ html.fp-enabled,
 .fb-menu-box.off,
 .next-view.off,
 .icon-scroll.off {opacity:0;visibility:hidden}
+.fb-menu-box.off #fp-menu .fp-menu-item a span {border-color:#fff}
 
 #section1,
 #section2,
