--- a/res/pub/front/resource/css/wadiz.css
+++ b/res/pub/front/resource/css/wadiz.css
@@ -694,6 +694,9 @@ body.show-spinner .spinor-area { display: block; }
 .error_box .basic_btn_box {margin-top:30px}
 .error_box .basic_btn_box .btn-type {border:2px solid #00cccc}
 
+/* 2020-04-20 add */
+.content-info-txt {color:#777;margin-bottom:20px;padding-left:8px;text-indent:-8px;line-height:20px}
+
 
 
 
