--- a/res/pub/front/resource/css/wadiz.mob.css
+++ b/res/pub/front/resource/css/wadiz.mob.css
@@ -6,7 +6,7 @@
 .select-box:after,
 .btn-move-top {background-size:250px auto;}
 .select-box:after {background-position:-100px -60px;width: 15px;height: 8px;}
-.btn-type {height:48px;line-height:46px;padding:0 15px;font-weight:400;font-size:17px;}
+.btn-type {height:48px;line-height:46px;padding:0 15px;font-weight:400;font-size:15px;letter-spacing:-1px}
 .btn-move-top {width:70px;height:69px;bottom:20px;margin-left:0;right:20px;left:auto;background-position:-50px -140px;}
 .radio .fake-radio {width:12px;height:12px;margin-right:4px;background-position:-200px -140px;}
 .radio input[type="radio"]:checked + .fake-radio { background-position-x: -220px;}
